fix(Applications):Remove gap between category hierarchy

--- a/src/features/home/ContextSearch/Applications/styles.scss
+++ b/src/features/home/ContextSearch/Applications/styles.scss
@@ -62,7 +62,6 @@
 .tree-hierarchies-wrapper {
   display: flex;
   flex-direction: column;
-  gap: 42px;
 
   width: 100%;
   max-width: 98%; // TODO: fix bug with horizontal scroll
